# djangotutorial

./: .gitignore  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/polls/migrations/: 0001_initial.py
mysite/products/: urls.py  views.py
mysite/products/templates/products/: base.html  index.html
