[project]
name = "djangotutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "mks_min",email = "mininname@vk.com"}
]
readme = "README.md"
requires-python = ">=3.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
django = "^5.2.1"
